# gtest-examples

./: README.md  notes.md
1-demo/: README.md  test_runner
1-demo/src/: sample.cpp  sample.h
1-demo/test/: test_sample.cpp
2-demo/: CMakeLists.txt  README.md  test_runner
2-demo/src/: math_operations.cpp  math_operations.h
2-demo/test/: test_math_operations.cpp
3-demo/: CMakeLists.txt  README.md
3-demo/include/: array_operations.h  class_operations.h  string_operations.h  utility_operations.h
3-demo/src/: array_operations.cpp  class_operations.cpp  string_operations.cpp  utility_operations.cpp
3-demo/tests/: CMakeLists.txt  test_array.cpp  test_class.cpp  test_strings.cpp  test_utility.cpp
4-demo-fixtures/: CMakeLists.txt
4-demo-fixtures/include/: database.h
4-demo-fixtures/src/: database.cpp
4-demo-fixtures/tests/: CMakeLists.txt  database_test.cpp
5-gtest-parameters/: CMakeLists.txt
5-gtest-parameters/include/: math_utils.h
5-gtest-parameters/src/: math_utils.cpp
5-gtest-parameters/tests/: math_utils_test.cpp
6-gtest-type-params/: CMakeLists.txt
6-gtest-type-params/include/: math_utils.h
6-gtest-type-params/tests/: test_is_zero.cpp
7-gtest-parameters-with-struct/: CMakeLists.txt
7-gtest-parameters-with-struct/tests/: CMakeLists.txt  math_utils_test.cpp
8-gtest-gmock-example/: CMakeLists.txt  README.md
8-gtest-gmock-example/include/: database.h
8-gtest-gmock-example/report/: index.html
8-gtest-gmock-example/report/coverage/Users/jiten/workspace/training/cpp-testing/gtest-examples/8-gtest-gmock-example/include/: database.h.html
8-gtest-gmock-example/report/coverage/Users/jiten/workspace/training/cpp-testing/gtest-examples/8-gtest-gmock-example/src/: service.cpp.html
8-gtest-gmock-example/report/coverage/Users/jiten/workspace/training/cpp-testing/gtest-examples/8-gtest-gmock-example/tests/: service_test.cpp.html
8-gtest-gmock-example/src/: service.cpp
8-gtest-gmock-example/tests/: CMakeLists.txt  service_test.cpp
